# MfPlayer

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  vcpkg.json
app/: main.cpp
common/: constants.h  embyfields.h  version.h
core/: io_pool.h
core/cache/: cachestore.cpp  cachestore.h  dbworker.cpp  dbworker.h  imagecacheprovider.cpp  imagecacheprovider.h
core/detail/: detailmanager.cpp  detailmanager.h
core/media/models/: mediamodel.cpp  mediamodel.h
core/network/: curlengine.cpp  curlengine.h
core/playback/: playbackcontroller.cpp  playbackcontroller.h
core/providers/emby/: embyclient.cpp  embyclient.h
core/server/: credentialstore.cpp  credentialstore.h  servermanager.cpp  servermanager.h
core/settings/: settingsstore.cpp  settingsstore.h
platform/rendering/mpv/: mpvcontroller.cpp  mpvcontroller.h  mpvrenderitem.cpp  mpvrenderitem.h
resources/: app.manifest  appicon.rc
tools/: build_mpv.sh  build_mpv_msvc.ps1  installer.iss  package.ps1  package.sh  svg_to_icon_qml.sh
ui/providers/: iconprovider.cpp  iconprovider.h
ui/qml/components/: CachedImage.qml  CastAndCrewRow.qml  HdrPqOverlay.qml  HorizontalMediaRow.qml  Icon.qml  ImageLoadQueue.qml  MediaInfoSection.qml  PersonBioSection.qml  PlayControlsRow.qml  RoundedImage.qml  SeriesSection.qml  SimilarItemsSection.qml  SmoothScroller.qml  StudiosSection.qml  StyledPopup.qml  TrackSelector.qml
ui/qml/dialogs/: ServerPanel.qml  SettingsDialog.qml
ui/qml/pages/: BrowsePage.qml  DetailPage.qml  Main.qml  PlayerPage.qml
ui/qml/shaders/: compile_hdr_shaders.bat  hdr_pq.frag  hdr_pq.vert  roundedmask.frag
ui/qml/theme/: Nav.qml  Str.qml  Theme.qml
ui/qml/views/: DebugOverlay.qml  HomeView.qml  LibraryGridView.qml  PlayerControls.qml  SuggestionsView.qml
